mobile-ver final

--- a/index.html
+++ b/index.html
@@ -39,15 +39,36 @@
         <section class="block" id="rating">
           <div class="content_rating">
             <div class="rate">
-              Rated 5 Stars in Reviews
+              <div class="star">
+                <img src="./images/icon-star.svg">
+                <img src="./images/icon-star.svg">
+                <img src="./images/icon-star.svg">
+                <img src="./images/icon-star.svg">
+                <img src="./images/icon-star.svg">
+              </div>
+              <p>Rated 5 Stars in Reviews</p>
             </div>
 
             <div class="rate">
-              Rated 5 Stars in Report Guru
+              <div class="star">
+                <img src="./images/icon-star.svg">
+                <img src="./images/icon-star.svg">
+                <img src="./images/icon-star.svg">
+                <img src="./images/icon-star.svg">
+                <img src="./images/icon-star.svg">
+              </div>
+              <p>Rated 5 Stars in Report Guru</p>
             </div>
 
             <div class="rate">
-              Rated 5 Stars in BestTech
+              <div class="star">
+                <img src="./images/icon-star.svg">
+                <img src="./images/icon-star.svg">
+                <img src="./images/icon-star.svg">
+                <img src="./images/icon-star.svg">
+                <img src="./images/icon-star.svg">
+              </div>
+              <p>Rated 5 Stars in BestTech</p>
             </div>
           </div>
         </section>
@@ -55,25 +76,48 @@
         <section class="block" id="feedback">
           <div class="content_feedback">
             <div class="feedback fb1">
-              <h2>Colton Smith</h2>
-              <h3>Verified Buyer</h3>
-              "We needed the same printed design as the one we had ordered a week prior.
+              <div class="info">
+                <div class="info_img">
+                  <img src="./images/image-colton.jpg" alt="Colton Smith">
+                </div>
+                <div class="info_name">
+                  <h2>Colton Smith</h2>
+                  <h3>Verified Buyer</h3>
+                </div>
+              </div>
+
+              <p>"We needed the same printed design as the one we had ordered a week prior.
               Not only did they find the original order, but we also received it in time.
-              Excellent!"
+              Excellent!"</p>
             </div>
             
             <div class="feedback fb2">
-              <h2>Irene Roberts</h2>
-              <h3>Verified Buyer</h3>
-              "Customer service is always excellent and very quick turn around. Completely
-              delighted with the simplicity of the purchase and the speed of delivery."
+              <div class="info">
+                <div class="info_img">
+                  <img src="./images/image-irene.jpg" alt="Irene Roberts">
+                </div>
+                <div class="info_name">
+                  <h2>Irene Roberts</h2>
+                  <h3>Verified Buyer</h3>
+                </div>
+              </div>
+
+              <p>"Customer service is always excellent and very quick turn around. Completely
+              delighted with the simplicity of the purchase and the speed of delivery."</p>
             </div>
             
             <div class="feedback fb3">
-              <h2>Anne Wallace</h2>
-              <h3>Verified Buyer</h3>
-              "Put an order with this company and can only praise them for the very high
-              standard. Will definitely use them again and recommend them to everyone!"
+              <div class="info">
+                <div class="info_img">
+                  <img src="./images/image-anne.jpg" alt="Anne Wallace">
+                </div>
+                <div class="info_name">
+                  <h2>Anne Wallace</h2>
+                  <h3>Verified Buyer</h3>
+                </div>
+              </div>
+              <p>"Put an order with this company and can only praise them for the very high
+              standard. Will definitely use them again and recommend them to everyone!"</p>
             </div>
           </div>
         </section>
