--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <!--style sheet-->
     <link rel="stylesheet" href="style.css"/>
 
+    <script src="https://kit.fontawesome.com/75e5dad444.js" crossorigin="anonymous"></script>
+
     <title>Frontend Mentor | Social proof section</title>
 
   </head>
@@ -40,33 +42,33 @@
           <div class="content_rating">
             <div class="rate">
               <div class="star">
-                <img src="./images/icon-star.svg">
-                <img src="./images/icon-star.svg">
-                <img src="./images/icon-star.svg">
-                <img src="./images/icon-star.svg">
-                <img src="./images/icon-star.svg">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
               </div>
               <p>Rated 5 Stars in Reviews</p>
             </div>
 
             <div class="rate">
               <div class="star">
-                <img src="./images/icon-star.svg">
-                <img src="./images/icon-star.svg">
-                <img src="./images/icon-star.svg">
-                <img src="./images/icon-star.svg">
-                <img src="./images/icon-star.svg">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
               </div>
               <p>Rated 5 Stars in Report Guru</p>
             </div>
 
             <div class="rate">
               <div class="star">
-                <img src="./images/icon-star.svg">
-                <img src="./images/icon-star.svg">
-                <img src="./images/icon-star.svg">
-                <img src="./images/icon-star.svg">
-                <img src="./images/icon-star.svg">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
               </div>
               <p>Rated 5 Stars in BestTech</p>
             </div>
