--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
   <body>
     <main>
       <div class="container">
-        <section class="block" id="intro">
+        <div class="block" id="intro">
           <div class="content_intro">
             <h1>10,000+ of our users love our products.</h1>
 
             <p>We only provide great products combined with excellent customer service.
             See what our satisfied customers are saying about our services.</p>
           </div>
-        </section>
+        </div>
         
-        <section class="block" id="rating">
+        <div class="block" id="rating">
           <div class="content_rating">
             <div class="rate">
               <div class="star">
@@ -73,9 +73,9 @@
               <p>Rated 5 Stars in BestTech</p>
             </div>
           </div>
-        </section>
+        </div>
         
-        <section class="block" id="feedback">
+        <div class="block" id="feedback">
           <div class="content_feedback">
             <div class="feedback">
               <div class="info">
@@ -122,7 +122,7 @@
               standard. Will definitely use them again and recommend them to everyone!"</p>
             </div>
           </div>
-        </section>
+        </div>
         </div>
     </main>
 
